# aimdb

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASE_NOTES_v0.1.0.md  SECURITY.md  deny.toml  rustfmt.toml
aimdb-bench/: Cargo.toml  README.md
aimdb-bench/benches/: b0_alloc_embassy.rs  b0_alloc_fanout_encode.rs  b0_alloc_linkable.rs  b0_alloc_migration.rs  b0_alloc_remote_ir.rs  b0_alloc_remote_json.rs  b0_alloc_tokio.rs  b1_b2_embassy.rs  b1_b2_fanout_encode.rs  b1_b2_remote_envelope.rs  b1_b2_remote_ir.rs  b1_b2_remote_json.rs  b1_b2_tokio.rs  b1_latency.rs  b1_latency_embassy.rs  b2_throughput.rs  b2_throughput_embassy.rs  b_alloc_pipeline.rs  b_runner_pipeline.rs
aimdb-bench/src/: alloc.rs  fanout_encode.rs  harness.rs  lib.rs  payloads.rs  profiles.rs  profiles_embassy.rs  remote_envelope.rs  remote_ir.rs  remote_json.rs  reports.rs
aimdb-client/: CHANGELOG.md  Cargo.toml  README.md
aimdb-client/src/: connection.rs  discovery.rs  endpoint.rs  engine.rs  error.rs  lib.rs  protocol.rs
aimdb-client/tests/: aimx_session.rs  pump_client.rs
aimdb-codegen/: CHANGELOG.md  Cargo.toml
aimdb-codegen/src/: lib.rs  mermaid.rs  rust.rs  state.rs  validate.rs
aimdb-core/: CHANGELOG.md  Cargo.toml  README.md  build.rs
aimdb-core/src/: builder.rs  codec.rs  connector.rs  consumer.rs  context.rs  database.rs  emitter.rs  error.rs  executor.rs  ext_macros.rs  extensions.rs  graph.rs  lib.rs  log.rs  metrics.rs  outbox.rs  pool.rs  producer.rs  producer_consumer.rs  record_id.rs  router.rs  runtime.rs  signal.rs  time.rs  tracked_fn.rs  transform.rs  transport.rs  typed_api.rs  typed_record.rs
aimdb-core/tests/: session_engine.rs
aimdb-data-contracts/: .gitignore  CHANGELOG.md  Cargo.toml
aimdb-data-contracts/src/: lib.rs  link_codec.rs  linkable.rs  migratable.rs  observable.rs  simulatable.rs  streamable.rs
aimdb-data-contracts/tests/: compile_fail.rs  export_ts.rs  linkable_derive.rs  migration_roundtrip.rs
aimdb-derive/: CHANGELOG.md  Cargo.toml  README.md
aimdb-derive/src/: lib.rs  migration_chain.rs
aimdb-embassy-adapter/: CHANGELOG.md  Cargo.toml  README.md  build.rs
aimdb-embassy-adapter/src/: buffer.rs  connectors.rs  database.rs  error.rs  join_fanin.rs  join_queue.rs  lib.rs  outbox.rs  runtime.rs  send_wrapper.rs  stream.rs  time.rs
aimdb-embassy-adapter/tests/: connectors_smoke.rs  session_smoke.rs
aimdb-executor/: CHANGELOG.md  Cargo.toml  README.md
aimdb-executor/src/: join.rs  lib.rs  ops.rs  test_support.rs
aimdb-knx-connector/: CHANGELOG.md  Cargo.toml  README.md
aimdb-knx-connector/src/: embassy_client.rs  lib.rs  tokio_client.rs  tunnel.rs
aimdb-knx-connector/tests/: connection_state_tests.rs  frame_building_tests.rs  group_address_tests.rs  topic_provider_tests.rs
aimdb-macros/: Cargo.toml
aimdb-macros/src/: lib.rs  service.rs
aimdb-mqtt-connector/: CHANGELOG.md  Cargo.toml  README.md
aimdb-mqtt-connector/src/: embassy_client.rs  embassy_tls.rs  lib.rs  link_ext.rs  sntp.rs  sntp_codec.rs  tokio.rs  tokio_client.rs
aimdb-mqtt-connector/tests/: link_ext_tests.rs  topic_provider_tests.rs
aimdb-persistence/: CHANGELOG.md  Cargo.toml  README.md
aimdb-persistence-sqlite/: CHANGELOG.md  Cargo.toml  README.md
aimdb-persistence-sqlite/src/: lib.rs
aimdb-persistence/src/: backend.rs  builder_ext.rs  error.rs  ext.rs  lib.rs  query_ext.rs
aimdb-persistence/tests/: query_handler_shape.rs  query_skip_invalid.rs
aimdb-serial-connector/: CHANGELOG.md  Cargo.toml
aimdb-serial-connector/examples/: serial_demo.rs
aimdb-serial-connector/src/: embassy_transport.rs  framing.rs  lib.rs  tokio_transport.rs
aimdb-serial-connector/tests/: cobs_framing.rs  embassy_smoke.rs  tokio_roundtrip.rs
aimdb-sync/: CHANGELOG.md  Cargo.toml  README.md
aimdb-sync/src/: consumer.rs  error.rs  handle.rs  lib.rs  producer.rs
aimdb-sync/tests/: integration_test.rs  settable_integration.rs
aimdb-tcp-connector/: CHANGELOG.md  Cargo.toml
aimdb-tcp-connector/examples/: tcp_demo.rs
aimdb-tcp-connector/src/: embassy_transport.rs  framing.rs  lib.rs  tokio_transport.rs
aimdb-tcp-connector/tests/: embassy_loopback.rs  framing.rs  tokio_roundtrip.rs
aimdb-tokio-adapter/: CHANGELOG.md  Cargo.toml  README.md  build.rs
aimdb-tokio-adapter/src/: buffer.rs  connector.rs  database.rs  error.rs  join_queue.rs  lib.rs  outbox.rs  runtime.rs  time.rs
aimdb-tokio-adapter/tests/: drain_integration_tests.rs  multi_instance_tests.rs  remote_access_validation.rs  stage_profiling.rs  subscription_tests.rs  transform_join_integration_tests.rs
aimdb-uds-connector/: CHANGELOG.md  Cargo.toml
aimdb-uds-connector/src/: lib.rs  transport.rs
aimdb-uds-connector/tests/: handshake_version.rs
aimdb-wasm-adapter/: CHANGELOG.md  Cargo.toml  README.md
aimdb-wasm-adapter/src/: bindings.rs  buffer.rs  join_fanin.rs  join_queue.rs  lib.rs  logger.rs  runtime.rs  schema_registry.rs  time.rs  ws_bridge.rs
aimdb-wasm-adapter/tests/: transform_join_integration_tests.rs
aimdb-websocket-connector/: CHANGELOG.md  Cargo.toml
aimdb-websocket-connector/benches/: fanout_socket.rs
aimdb-websocket-connector/examples/: ws_client.rs  ws_server.rs
aimdb-websocket-connector/src/: auth.rs  builder.rs  client_manager.rs  codec.rs  connector.rs  dispatch.rs  e2e.rs  lib.rs  protocol.rs  registry.rs  server.rs  session.rs  transport.rs
aimdb-websocket-connector/tests/: e2e.rs  ws_roundtrip.rs
aimdb-ws-protocol/: CHANGELOG.md  Cargo.toml
aimdb-ws-protocol/src/: lib.rs
examples/: Cargo.toml  quickstart.rs
examples/embassy-bench-stm32h5/: .gitignore  Cargo.toml  README.md  flash.sh
examples/embassy-knx-connector-demo/: Cargo.toml  build.rs  flash.sh
examples/embassy-mqtt-connector-demo/: .gitignore  Cargo.toml  README.md  flash.sh
examples/embassy-runtime-demo/: Cargo.toml  flash.sh
examples/embassy-serial-connector-demo/: Cargo.toml  README.md  flash.sh
examples/hello-mailbox/: Cargo.toml  README.md
examples/hello-mailbox-async/: Cargo.toml  README.md
(+308 files in other folders)
