[workspace]
members = [
    "aimdb-executor",
    "aimdb-derive",
    "aimdb-core",
    "aimdb-client",
    "aimdb-embassy-adapter",
    "aimdb-tokio-adapter",
    "aimdb-sync",
    "aimdb-mqtt-connector",
    "aimdb-knx-connector",
    "tools/aimdb-cli",
    "tools/aimdb-mcp",
    "examples/knx-connector-demo-common",
    "examples/mqtt-connector-demo-common",
    "examples/tokio-mqtt-connector-demo",
    "examples/tokio-knx-connector-demo",
    "examples/embassy-mqtt-connector-demo",
    "examples/embassy-knx-connector-demo",
    "examples/sync-api-demo",
    "examples/remote-access-demo",
]
exclude = ["_external"]
resolver = "2"
# Note: build aimdb-core only by default. Use make all to build the full workspace!
default-members = ["aimdb-core"]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["AimDB Team <team@aimdb.dev>"]
license = "Apache-2.0"
repository = "https://github.com/aimdb-dev/aimdb"
homepage = "https://aimdb.dev"
description = "Async in-memory database for data synchronization across MCU → edge → cloud environments"
keywords = ["database", "async", "embedded", "sync", "iot"]
categories = ["database-implementations", "embedded", "asynchronous"]

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.47.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }

# Serialization (no_std compatible by default)
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }

# Error handling
thiserror = "2.0.16"
anyhow = "1.0"

# Serialization - extend with error handling
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Basic observability
tracing = { version = "0.1", default-features = false }

# Metrics
metrics = "0.23"

# Async utilities
futures = "0.3"

# CLI (for aimdb-cli)
clap = { version = "4.0", features = ["derive"] }

# Development dependencies
tokio-test = "0.4"
aimdb-tokio-adapter = { path = "./aimdb-tokio-adapter" }

# Embassy ecosystem for embedded async
embassy-stm32 = { version = "0.4.0", path = "./_external/embassy/embassy-stm32", features = [
    "defmt",
    "stm32h563zi",
    "memory-x",
    "time-driver-any",
    "exti",
    "unstable-pac",
    "low-power",
] }
embassy-sync = { version = "0.7.2", path = "./_external/embassy/embassy-sync", features = [
    "defmt",
] }
embassy-executor = { version = "0.9.0", path = "./_external/embassy/embassy-executor", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.5.0", path = "./_external/embassy/embassy-time", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-net = { version = "0.7.1", path = "./_external/embassy/embassy-net", features = [
    "defmt",
    "tcp",
    "dhcpv4",
    "medium-ethernet",
    "proto-ipv6",
] }
embassy-usb = { version = "0.5.1", path = "./_external/embassy/embassy-usb", features = [
    "defmt",
] }
embassy-futures = { version = "0.1.2", path = "./_external/embassy/embassy-futures" }

# Embedded HAL for peripheral abstractions
embedded-hal = "0.2.6"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-nb = "1.0"
embedded-hal-bus = { version = "0.2", features = ["async"] }
embedded-io = { version = "0.6.0" }
embedded-io-async = { version = "0.6.1" }
embedded-nal-async = "0.8.0"
embedded-storage = "0.3.1"

# Embedded runtime and utilities
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
static_cell = "2"

# Embedded debugging and logging
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# Embedded utilities
heapless = { version = "0.8", default-features = false }
micromath = "2.0.0"
stm32-fmc = "0.3.0"

# Patch mountain-mqtt-embassy's Embassy dependencies to use our local checkout
# This prevents version conflicts between crates.io Embassy and our git submodule
[patch.crates-io]
embassy-executor = { path = "./_external/embassy/embassy-executor" }
embassy-time = { path = "./_external/embassy/embassy-time" }
embassy-sync = { path = "./_external/embassy/embassy-sync" }
embassy-net = { path = "./_external/embassy/embassy-net" }
embassy-futures = { path = "./_external/embassy/embassy-futures" }

# Patch mountain-mqtt to use our fork for Embassy version compatibility
# Required until upstream updates Embassy dependencies to match our workspace
mountain-mqtt = { path = "./_external/mountain-mqtt/mountain-mqtt" }
mountain-mqtt-embassy = { path = "./_external/mountain-mqtt/mountain-mqtt-embassy" }

# Patch knx-pico to use our fork with bug fixes until they're upstreamed
# Required fixes: DPT 9 encoding/decoding, panic prevention, Embassy compat
knx-pico = { path = "./_external/knx-pico" }

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
