[package]
name = "aimdb-client"
version = "0.6.0"
edition = "2021"
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "AimX protocol client for remote AimDB introspection and management"
keywords = ["client", "protocol", "database", "remote", "rpc"]
categories = ["database", "network-programming"]

[features]
metrics = ["aimdb-core/metrics"]
profiling = ["aimdb-core/profiling"]

[dependencies]
# Core dependencies - protocol types from aimdb-core. `connector-session`
# exposes the shared session engine (`run_client`/`ClientHandle`) plus the AimX
# UDS transport + codec that the engine-based client (`crate::engine`) builds on.
aimdb-core = { version = "1.1.0", path = "../aimdb-core", features = [
    "std",
    "connector-session",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime (must match AimDB runtime)
tokio = { version = "1", features = ["net", "io-util", "macros", "fs"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
# Supplies the `TimeOps` clock the engine-based client hands to `run_client`
# (reconnect backoff / keepalive). This client always drives the engine on tokio.
aimdb-tokio-adapter = { version = "0.6.0", path = "../aimdb-tokio-adapter" }

# Error handling
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "test-util"] }
tokio-test = "0.4"
tempfile = "3"
# The aimx_session exit test stands up a real AimDb + production AimX server
# (`build_aimx_server`) and drives it with the engine-based `AimxConnection`.
aimdb-tokio-adapter = { version = "0.6.0", path = "../aimdb-tokio-adapter" }
serde = { version = "1", features = ["derive"] }
