[package]
name = "aimdb-client"
version = "0.6.0"
edition = "2021"
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "AimX protocol client for remote AimDB introspection and management"
keywords = ["client", "protocol", "database", "remote", "rpc"]
categories = ["database", "network-programming"]

[features]
default = ["transport-uds"]
observability = ["aimdb-core/observability"]

# Transports the endpoint resolver (`crate::endpoint`) can dial. Each gates its
# connector dep + the matching `dial`/`parse` arm; an endpoint whose scheme isn't
# compiled in is rejected at resolve time.
transport-uds = ["dep:aimdb-uds-connector"]
transport-serial = ["dep:aimdb-serial-connector"]
transport-tcp = ["dep:aimdb-tcp-connector"]

[dependencies]
# Core dependencies - protocol types from aimdb-core. `connector-session`
# exposes the shared session engine (`run_client`/`ClientHandle`) plus the AimX
# codec that the engine-based client (`crate::engine`) builds on.
aimdb-core = { version = "1.1.0", path = "../aimdb-core", features = [
    "std",
    "connector-session",
] }

# Transports the resolver dials over (relocated out of core in Phase 6), each
# behind its `transport-*` feature so a binary links only what it needs.
aimdb-uds-connector = { version = "0.1.0", path = "../aimdb-uds-connector", optional = true }
aimdb-serial-connector = { version = "0.1.0", path = "../aimdb-serial-connector", default-features = false, features = [
    "tokio-runtime",
], optional = true }
aimdb-tcp-connector = { version = "0.1.0", path = "../aimdb-tcp-connector", default-features = false, features = [
    "tokio-runtime",
], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime (must match AimDB runtime)
tokio = { version = "1", features = ["net", "io-util", "macros", "fs"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
# Supplies the `TimeOps` clock the engine-based client hands to `run_client`
# (reconnect backoff / keepalive). This client always drives the engine on tokio.
aimdb-tokio-adapter = { version = "0.6.0", path = "../aimdb-tokio-adapter" }

# Error handling
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "test-util"] }
tokio-test = "0.4"
tempfile = "3"
