[package]
name = "aimdb-codegen"
version = "0.5.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Code generation library for AimDB architecture agent — reads state.toml and emits Mermaid diagrams and Rust source"
keywords = ["codegen", "architecture", "mermaid", "schema", "aimdb"]
categories = ["development-tools"]

[dependencies]
proc-macro2 = "1"
prettyplease = "0.2"
quote = "1"
serde = { version = "1.0", features = ["derive"] }
syn = "2"
toml = "0.8"

[dev-dependencies]
# No external dev deps — integration tests use generated string content
