[package]
name = "aimdb-core"
version = "0.2.0"
edition = "2021"
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core database engine for AimDB - async in-memory data synchronization with bidirectional connectors"
keywords = ["database", "async", "in-memory", "sync", "embedded"]
categories = ["database-implementations", "asynchronous", "embedded"]
build = "build.rs"

[features]
default = ["std"]

# Core capabilities
std = [
    "alloc",              # std includes alloc
    "serde",
    "thiserror",
    "anyhow",
    "serde_json",
    "tokio",
    "aimdb-executor/std",
]

# Heap allocation in no_std environments
alloc = ["serde"] # Enable heap in no_std

# Observability features (available on both std/no_std)
tracing = ["dep:tracing"]        # Works in both std and no_std environments
defmt = ["dep:defmt"]            # Embedded logging via probe (no_std)
metrics = ["dep:metrics", "std"] # Requires std for aggregation

# Testing features
test-utils = ["std"]

[dependencies]
# Executor traits (always available)
aimdb-executor = { version = "0.1.0", path = "../aimdb-executor", default-features = false }

# Stream trait for bidirectional connectors (minimal, no_std compatible)
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = [
    "alloc",
] }

# Serialization (optional)
serde = { workspace = true, optional = true }

# Error handling - only for std environments
thiserror = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Async runtime - only for std environments with remote access
tokio = { workspace = true, features = [
    "net",
    "io-util",
    "sync",
    "time",
], optional = true }

# Atomic operations for all platforms
portable-atomic = { version = "1.9", default-features = false }

# Observability (optional)
tracing = { workspace = true, optional = true }
defmt = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }

# Synchronization primitives for no_std
spin = { version = "0.9", default-features = false, features = [
    "mutex",
    "spin_mutex",
] }

# Hash map for no_std (same implementation as std::collections::HashMap)
hashbrown = { version = "0.15", default-features = false }

[dev-dependencies]
# For no_std testing
heapless = "0.9.1"
# For async testing
tokio = { workspace = true, features = ["macros", "rt", "time"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
