[package]
name = "aimdb-core"
version = "1.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Type-safe async data pipelines — one Rust codebase from MCU to cloud"
keywords = ["database", "async", "in-memory", "sync", "embedded"]
categories = ["database-implementations", "asynchronous", "embedded"]
build = "build.rs"

[features]
default = ["std", "alloc", "derive"]

# Derive macros for RecordKey
derive = ["aimdb-derive"]

# Core capabilities
std = [
    "alloc",              # std includes alloc
    "serde",
    "anyhow",
    "remote",
    # AimX remote access now rides the shared session engine: `with_remote_access`
    # builds the `session::aimx` server, so std pulls in the connector-session module.
    "connector-session",
]

# Heap allocation in no_std environments
alloc = ["serde"] # Enable heap in no_std

# Remote access: the serde_json-backed JSON value codec (`crate::codec`,
# `RecordValue::as_json()`) plus the AimX remote-access data model
# (`crate::remote`): record metadata + introspection (`RecordMetadata`,
# `AimDb::list_records`), the JSON read/write/subscribe API
# (`try_latest_as_json` / `set_record_from_json` / `JsonBufferReader`), and
# the wire protocol/config/security/error types. The AimX *server* dispatch
# (`session::aimx`) additionally needs `connector-session`. All compiles on
# `no_std + alloc`.
remote = ["alloc", "serde_json"]

# The connector-session substrate (`crate::session`): the dyn-safe trait set
# (Connection/Listener/Dialer, Dispatch/EnvelopeCodec, Source + shared types) and
# the runtime-neutral engines built on it — the reactive server (`serve`/
# `run_session`), the proactive client (`run_client`/`pump_client`), the
# `pump_sink`/`pump_source` data plane, and the generic session connectors. Engine
# logic included; all compiles on `no_std + alloc`. The AimX protocol port
# (`session::aimx`) additionally needs `remote-access`. See the design doc:
# docs/design/remote-access-via-connectors.md.
connector-session = ["alloc"]

# Observability features (available on both std/no_std)
tracing = ["dep:tracing"] # Works in both std and no_std environments
defmt = ["dep:defmt"]     # Embedded logging via probe (no_std)
# Observability: buffer introspection counters (produced/consumed/dropped/
# occupancy) plus automatic stage profiling (.source()/.tap()/.link() timing).
# Works in no_std (heap + atomics + a runtime clock).
# `portable-atomic/critical-section` provides the 64-bit-atomic fallback on
# targets without native 64-bit atomics (e.g. thumbv7em); it's a no-op where
# native atomics exist, and embedded binaries already supply a
# `critical-section` impl.
observability = ["alloc", "portable-atomic/fallback", "portable-atomic/critical-section"]

# Testing features
test-utils = ["std"]

[dependencies]
# Derive macros (optional)
aimdb-derive = { version = "0.2.0", path = "../aimdb-derive", optional = true }

# Stream trait for bidirectional connectors (minimal, no_std compatible)
futures-core = { version = "0.3", default-features = false }
# `async-await-macro` enables the `select_biased!` macro the runtime-neutral
# session engines use (Phase 5; it pulls in `futures-macro` + `async-await`);
# `alloc` covers the combinators (`fuse`, `select_next_some`). All no_std-
# compatible — no `std`/`tokio` enters the engine compile path.
futures-util = { version = "0.3", default-features = false, features = [
    "alloc",
    "async-await-macro",
] }
# Runtime-neutral `oneshot` for the session engines (alloc-backed, no_std-ready).
# `futures-channel`'s `mpsc` is std-only, so the engines use `async-channel` for
# that (below); only its `oneshot` is used here.
futures-channel = { version = "0.3", default-features = false, features = ["alloc"] }
# Runtime-neutral mpsc (bounded + unbounded) for the session engines — one
# alloc-backed implementation for every runtime (tokio + Embassy). Owned,
# cloneable `Arc`-based senders (so the `'static` per-connection/-subscription
# pump futures can hold them) and a `Receiver: Stream` with `len()`. no_std + alloc.
async-channel = { version = "2", default-features = false }

# Serialization (optional)
serde = { workspace = true, optional = true }

# Error handling (thiserror 2.x is no_std-capable; DbError derives it on every target)
thiserror = { version = "2.0.16", default-features = false }
anyhow = { workspace = true, optional = true }
# `raw_value` lets the connector-session `EnvelopeCodec` splice an already-
# serialized record-value `Payload` into a JSON envelope without re-escaping
# (037 Decision 1). Only compiled when `serde_json` is pulled in (std /
# remote); the no_std `connector-session` contracts build never sees it.
serde_json = { workspace = true, optional = true, features = ["raw_value"] }

# Atomic operations for all platforms
portable-atomic = { version = "1.9", default-features = false }

# Observability (optional)
tracing = { workspace = true, optional = true }
defmt = { workspace = true, optional = true }

# Synchronization primitives for no_std
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }

# Hash map for no_std (same implementation as std::collections::HashMap)
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }

[dev-dependencies]
# For no_std testing
heapless = "0.9.1"
# For async testing (`sync` covers tokio::sync::mpsc in tests/session_engine.rs,
# which previously leaked in from the optional [dependencies] entry)
tokio = { workspace = true, features = ["macros", "rt", "time", "sync"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
