[package]
name = "aimdb-data-contracts"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Trait definitions for AimDB data contracts: SchemaType, Streamable, Observable, Linkable, Simulatable, Migratable"
keywords = ["aimdb", "iot", "edge", "schema", "contracts"]
categories = ["embedded", "no-std"]

[features]
default = ["std"]
alloc = ["serde/alloc"]
std = ["alloc", "serde/std", "serde_json?/std"]
linkable = ["alloc", "serde_json"]
simulatable = ["rand"]
migratable = ["alloc", "serde_json", "dep:aimdb-derive"]
observable = ["alloc", "aimdb-core"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { workspace = true, optional = true }

# migration_chain! proc-macro (build-time only; no target/runtime/no_std
# impact — see aimdb-derive::migration_chain). No cycle: aimdb-derive emits
# token paths to this crate but does not depend on it.
aimdb-derive = { version = "0.2.0", path = "../aimdb-derive", optional = true }

# Optional dependencies for observable feature (log_tap function)
# Note: aimdb-core requires alloc feature for core functionality
aimdb-core = { version = "1.1.0", path = "../aimdb-core", optional = true, default-features = false, features = [
    "alloc",
] }
[dependencies.rand]
version = "0.10.1"
optional = true
default-features = false
features = ["std_rng"]

[dev-dependencies]
serde_json = "1.0"
trybuild = "1.0"
